# tmux-pane-status

./: README.md  entry_points.cfg  setup.cfg  test.sh
.github/workflows/: pythonpackage.yml
tmux_pane_status/: __init__.py  abc.py  defaults.py  directory.py  format.py  formatters.py  git.py  main.py  pgrep.py  ps.py  s.py  shell.py  test_directory.py  test_formatters.py  test_s.py  value.py
