[metadata]
name = tmux-pane-status
version = attr: tmux_pane_status.__version__
description = Tmux pane status
long_description = file: README.md, CHANGELOG.md, LICENSE.md
keywords = tmux
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
install_requires =
entry_points = file: entry_points.cfg

[options.package_data]
* = *.txt, *.rst

[options.extras_require]
test = flake8

[options.packages.find]
exclude =